[package]
name = "atmospheric_sim"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14", default-features = false, features = [
    "bevy_winit",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_sprite",
    "x11",
] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
